--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -9,10 +9,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-    - name: configure
-      run: ./configure
     - name: make
-      run: make
+      run: make -std=c++17
     - name: make check
       run: make check
     - name: make distcheck
